# carnalyser

./: Cargo.toml  LICENSE  LICENSE-COMMERCIAL  Makefile  README.md
doc/: product_vision.md
src/: analysis.rs  app.rs  audio.rs  main.rs  parser.rs  ui_impl.rs
src/ui/: mod.rs  tab_acoustic.rs  tab_channels.rs  tab_derived.rs  tab_statistics.rs  toolbar.rs
