[package]
name        = "ecu-analyzer"
version     = "0.1.0"
edition     = "2021"
authors     = ["Cédric Renzi"]
description = "ECU diagnostic data analyzer – MaxiECU XML, solenoid diff, engine analysis, acoustic DFT"
license     = "MIT"
repository  = ""

[[bin]]
name = "ecu-analyzer"
path = "src/main.rs"

[dependencies]
eframe          = { version = "0.31", features = ["default_fonts"] }
egui            = "0.31"
egui_plot       = "0.31"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
roxmltree       = "0.20"
hound           = "3.5"           # WAV reader
rustfft         = "6"             # FFT
rfd             = "0.15"          # native file dialog
chrono          = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto       = true
